[package]
name = "sakura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dashmap = "5.1.0"
deadpool-postgres = "0.10.1"
dotenv = "0.15.0"
futures-util = "0.3.21"
lazy_static = "1.4.0"
onig = { default-features = false, version = "6.3.1" }
serde = { features = ["derive"], version = "1.0.136" }
sysinfo = { default-features = false, version = "0.23.4" }
tokio = { features = ["macros", "rt-multi-thread", "sync", "time"], version = "1.17.0" }
tokio-postgres = { features = ["with-chrono-0_4"], version = "0.7.5" }
twilight-cache-inmemory = { features = ["permission-calculator"], version = "0.9.1" }
twilight-embed-builder = "0.9.0"
twilight-gateway = "0.9.1"
twilight-http = "0.9.1"
twilight-interactions = "0.9.0"
twilight-model = "0.9.2"
twilight-util = { default-features = false, features = ["builder"], version = "0.9.1" }